--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -12,3 +12,48 @@ body {
 h1 {
   font-size: 1.25rem;
 }
+
+.custom-display-2 {
+  font-size: 3rem;
+  font-weight: 300;
+  line-height: 1.2;
+  margin-bottom: 9rem;
+  margin-top: -0.5rem;
+}
+
+.custom-text-centered {
+  text-align: center;
+}
+
+.custom-text-black {
+  color: #000;
+}
+
+.custom-my-3 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.custom-list-unstyled {
+  list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
+  margin-top: -9rem;
+}
+
+.custom-small {
+  font-size: 0.875em;
+}
+
+.custom-mx-auto {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.custom-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
