--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -60,9 +60,14 @@ h1 {
   margin-right: auto;
 }
 
+.custom-mt-4 {
+  margin-top: 1.5rem;
+}
+
 .custom-row {
   display: flex;
   flex-wrap: wrap;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
+
